2015-09-09  Chih-Hung Hsieh  <chh@google.com>

	* dwarf_macro_getsrcfiles.c (dwarf_macro_getsrcfiles): Remove
	redundant NULL tests on parameters declared with __nonnull_attribute__.
	* dwarf_siblingof.c (dwarf_siblingof): Likewise.
	* libdw_visit_scopes.c (__libdw_visit_scopes): Likewise.

2015-09-04  Chih-Hung Hsieh  <chh@google.com>
	    Mark Wielaard  <mjw@redhat.com>

	* dwarf_getlocation.c (getlocations_addr): Replace K&R function
	definition with ansi-C definition and add const qualifier to
	locs argument.

2015-09-04  Chih-Hung Hsieh  <chh@google.com>

	* libdw_findcu.c (__libdw_intern_next_unit): Replace K&R function
	definition with ansi-C definitions.
	(__libdw_findcu): Likewise.

2015-08-25  Mark Wielaard  <mjw@redhat.com>

	* dwarf.h: Add DW_LANG_Haskell.

2015-06-18  Mark Wielaard  <mjw@redhat.com>

	* dwarf_begin_elf.c (dwarf_begin_elf): Assert page size is big enough
	to hold a Dwarf.

2015-06-18  Mark Wielaard  <mjw@redhat.com>

	* dwarf_getpubnames.c (get_offsets): Always free mem on error.

2015-06-18  Mark Wielaard  <mjw@redhat.com>

	* dwarf_getmacros.c (get_macinfo_table): Return NULL when
	dwarf_formudata reports an error.
	(get_table_for_offset): Likewise.

2015-06-08  Mark Wielaard  <mjw@redhat.com>

	* dwarf_getsrclines.c (read_srclines): Initialize dirarray early.

2015-06-06  Mark Wielaard  <mjw@redhat.com>

	* dwarf_getsrclines.c (read_srclines): Initialize filelist early.

2015-05-27  Mark Wielaard  <mjw@redhat.com>

	* encoded-value.h (read_encoded_value): Check data d_size contains
	at least enough data to hold a pointer for DW_EH_PE_indirect.

2015-05-22  Mark Wielaard  <mjw@redhat.com>

	* dwarf_getsrclines.c (read_srclines): Limit stack usage of lines
	with MAX_STACK_LINES, files with MAX_STACK_LINES and dirs with
	MAX_STACK_DIRS. Calculate number of dirs needed first, then
	create dirarray directly, without needing the next field. Free
	not stack allocated lines and files at the end.

2015-05-19  Mark Wielaard <mjw@redhat.com>
