@@ -1,3 +1,7 @@
+2015-09-15  Mark Wielaard  <mjw@redhat.com>
+
+	* dwarf_peel_type.c (dwarf_peel_type): Don't reassign result pointer.
+
 2015-09-09  Chih-Hung Hsieh  <chh@google.com>
 
 	* dwarf_macro_getsrcfiles.c (dwarf_macro_getsrcfiles): Remove
